--- a/style.css
+++ b/style.css
@@ -153,9 +153,12 @@ body {
 }
 
 @media screen and (max-width: 700px) {
+  .illustrationOverflow {
+    height: 6rem;
+  }
   .cardWrapper {
     width: 17rem;
-    height: 27rem;
+    height: 26rem;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
